--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <li onclick="openHam('close')">About Us</li>
     </ul>
   </div>
-<iframe data-aa='2152074' src='//ad.a-ads.com/2152074?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+<center><iframe data-aa='2152074' src='//ad.a-ads.com/2152074?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></center>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
   <script src="assets/js/functions-min.js"></script>
